# MolCraftDiffusion

./: .gitignore  README.md  pyproject.toml
3DMolViewer/: app.py
configs/: eval_predict.yaml  example_diffusion_TL.yaml
configs/data/: mol_dataset.yaml  mol_dataset_extraf.yaml
configs/hydra/: default.yaml
configs/interference/: gen_gg.yaml
configs/tasks/: diffusion.yaml  diffusion_egt.yaml  diffusion_extraf.yaml  diffusion_pretrained.yaml  guidance.yaml  regression.yaml
configs/trainer/: default.yaml  regression.yaml
scripts/: eval_predict.py  generate.py  predict.py  train.py
scripts/applications/iflp_geom_target/: compute_iflp_geom_desc.py  process_int2_database.py
scripts/applications/singlet_fission/: extract_g16_output.py  extract_gen_hit.py
scripts/applications/utils/: compute_metrics.py  compute_rmsd.py  compute_similarity.py  make_light_ckpt.py  split_data.py  xtb_optimization.py  xyz2mol.py
scripts/applications/virtual_lib_cp/: compute_steric_descriptor.py  dock_ligand.py  filter_cp.py  process_dir.py  workflow.sh
scripts/gradient_guidance/: scheduler.py  sf_energy_score.py
src/MolecularDiffusion/: __init__.py  _version.py
src/MolecularDiffusion/callbacks/: train_helper.py
src/MolecularDiffusion/core/: engine.py  meter.py
src/MolecularDiffusion/data/: dataloader.py  dataset.py
src/MolecularDiffusion/data/component/: dataset.py
src/MolecularDiffusion/modules/layers/: conv.py
src/MolecularDiffusion/modules/models/: __init__.py  egcl.py  en_diffusion.py  noisemodel.py
src/MolecularDiffusion/modules/tasks/: __init__.py  diffusion.py  metrics.py  regression.py
src/MolecularDiffusion/runmodes/: __init__.py
src/MolecularDiffusion/runmodes/generate/: tasks_generate.py
src/MolecularDiffusion/runmodes/train/: __init__.py  data.py  (+5 more)
src/MolecularDiffusion/utils/: __init__.py  geom_analyzer.py  geom_constant.py  geom_metrics.py  geom_utils.py  io.py  pretty.py  sascore.py  smilify.py  torch.py
tests/: test_import.py
tutorials/: README.md
tutorials/01_training_diffusion/: README.md  my_first_run.yaml
tutorials/02_training_regressor/: README.md  my_regressor_run.yaml
tutorials/03_training_guidance/: README.md  my_guidance_run.yaml
tutorials/04_finetuning/: README.md  finetune_add_condition.yaml  finetune_new_data.yaml  finetune_outpainting.yaml
tutorials/05_generation_overview/: README.md  unconditional_generation.yaml
tutorials/06_structure_guided_generation/: README.md  my_inpaint.yaml  my_outpaint.yaml
tutorials/07_property_directed_generation/: README.md  gen_cfg.yaml  gen_cfggg.yaml  gen_gg.yaml
visualizer/: chemiscop_app.py  chemiscop_ngl_app.py
